# nrtk-jatic

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mypy.ini  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml
.gitlab-ci/: .gitlab-build.yml  .gitlab-docs.yml  .gitlab-security.yml  .gitlab-shared.yml  .gitlab-test.yml
configs/: AUKUS_app.env
docs/: api.rst  conf.py  index.rst  installation.rst  jatic_interoperability.rst  release_notes.rst  release_process.rst  review_process.rst  schema.rst  sphinx_server.py  utils.rst
docs/containers/: aukus.rst
docs/miscellaneous/: creating_public_release_request.rst
docs/release_notes/: pending_release.rst  v0.1.0.rst  v0.1.1.rst  v0.2.0.rst  v0.3.0.rst  v0.4.0.rst  v0.5.0.rst
docs/releasing/: release_process.rst
examples/: augmentations.ipynb  compute_image_metric.ipynb  jatic-perturbations-saliency.ipynb  jatic-perturbations.ipynb  nrtk-maite-demonstration-suite.ipynb  nrtk105.ipynb  nrtk_brightness_perturber_demo.ipynb  nrtk_focus_perturber_demo.ipynb  nrtk_sensor_transformation_demo.ipynb  nrtk_translation_perturber_demo.ipynb  nrtk_turbulence_perturber_demo.ipynb
examples/daml/: daml_example_notebook.ipynb  daml_train_encoder.ipynb
examples/daml/model/: xview_encoder.pkl
examples/gradio/: nrtk-gradio.ipynb
examples/models/: datasets.py  wrapper.py
nrtk_cdao/: __init__.py
nrtk_cdao/api/: app.py  aukus_app.py  aukus_schema.py  converters.py  schema.py
nrtk_cdao/interop/: augmentation.py  dataset.py  utils.py
nrtk_cdao/interop/object_detection/: augmentation.py  dataset.py  utils.py
nrtk_cdao/utils/: nrtk_perturber.py  nrtk_pybsm_perturber.py
scripts/: pycv2_installed_version.py  update_release_notes.sh
src/nrtk_jatic/: __init__.py
src/nrtk_jatic/api/: app.py  aukus_app.py  converters.py  schema.py
src/nrtk_jatic/interfaces/: image_metric.py
src/nrtk_jatic/interop/image_classification/: augmentation.py  dataset.py
src/nrtk_jatic/interop/metric/: augmentation.py
src/nrtk_jatic/interop/object_detection/: augmentation.py  dataset.py  utils.py
src/nrtk_jatic/utils/: nrtk_perturber.py
tests/: __init__.py
tests/api/: test_AUKUS_app.py  test_app.py  test_conversion_funcs.py
tests/data/: bad_nrtk_config.yaml  nrtk_blur_config.json  nrtk_config.yaml  nrtk_pybsm_config.json  pybsm_config.yaml  pybsm_perturb_params.yaml
tests/data/VisDrone2019-DET-test-dev-TINY/annotations/: COCO_annotations_VisDrone_TINY.json
tests/examples/: test_notebooks.py
tests/interop/: test_augmentation.py  test_generic.py  test_utils.py
tests/interop/image_classification/: test_augmentation.py  test_dataset.py
tests/interop/object_detection/: test_augmentation.py  test_dataset.py  test_utils.py
tests/utils/: test_nrtk_perturber.py  test_nrtk_perturber_cli.py  test_nrtk_pybsm_perturber.py  test_resize_perturber.py  test_utils.py
